--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -4,7 +4,7 @@
     background-repeat:no-repeat;
     background-size: cover;
     width: 100%;
-    color: cornsilk;
+    color: #FBFFE2;
     display: flex;
     align-items: center;
     justify-content: center;
