--- a/frontend/src/components/Product/ProductDetails.css
+++ b/frontend/src/components/Product/ProductDetails.css
@@ -1,6 +1,6 @@
 
 .ProductDetails {
-    background-color: rgb(255, 255, 255);
+    /* background-color: rgb(255, 255, 255); */
     width: 100vw;
     max-width: 100%;
     padding: 6vmax;
