--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -18,11 +18,14 @@ h1{
     animation: 0.5s ease-out 0s 1 slideInUp;
 
 }
-
+a:hover{
+    background-color: transparent;
+}
 .button-grid{
     display: flex;
     justify-content: center;
 }
+
 #Button{
     color: #F14A16;
     font-size: 1.5rem;
@@ -36,6 +39,7 @@ h1{
     border-color: black;
     color: black;
     box-shadow:gray;
+    background-color: transparent;
 }
 .container p{
     font-size: 3rem;
@@ -112,7 +116,7 @@ transform: scale(1.1);
 .container-2{
     display: flex;
     margin: 2vmax auto;
-    width: 80vw;
+    width: fit-content;
     flex-wrap: wrap;
     justify-content: center;
     max-width: 100%;
