--- a/frontend/src/components/User/Profile.css
+++ b/frontend/src/components/User/Profile.css
@@ -11,7 +11,24 @@
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
 }
-
+.nodisplay{
+  display:none
+}
+.display{
+  border: none;
+  background-color: rgb(68, 68, 68);
+  font: 400 1.3vmax "Jost";
+  color: white;
+  text-decoration: none;
+  padding: 1.5vmax;
+  text-align: center;
+  transition: all 0.5s;
+  margin: 2vmax auto;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 @keyframes gradient {
   0% {
