Dashboard to Payment

--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -63,7 +63,38 @@ a:hover{
     margin: 5vmax auto;
 
 }
+.categoryCard{
+    width: 17vmax;
+    height: 17vmax;
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    margin: 2vmax;
+    background-image:linear-gradient(0deg, rgba(128, 128, 128, 0.589), rgba(128, 128, 128, 0.589));
+    background-repeat:no-repeat;
+    background-size: cover;
+    
+}
 
+
+.Category-card-div>h3{
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    margin: 5px;
+    margin-top: 50%;
+    border-bottom: 1px solid white;
+}
+.Category-card-div>p{
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+
+}
 .productCard{
     width:16vmax;
     display: flex;
@@ -109,6 +140,11 @@ a:hover{
     color: black;
     font-size: 1.3vmax;
     font-family: "Franklin Gothic Medium";
+    display: contents;
+}
+.discount{
+    color: green;
+    font-size: 0.7rem;
 }
 .productCard:hover{
 transform: scale(1.1);
@@ -120,6 +156,10 @@ transform: scale(1.1);
     flex-wrap: wrap;
     justify-content: center;
     max-width: 100%;
+}
+.Carousel{
+    width: 100%;
+    height: 30%;
 }
 @media(max-width:600px){
     .productCard>p{
