--- a/frontend/src/components/admin/sidebar.css
+++ b/frontend/src/components/admin/sidebar.css
@@ -41,9 +41,9 @@
     margin-right: 0.5rem;
   }
   
-  .MuiTypography-root {
+  /* .MuiTypography-root {
     background-color:rgb(229 188 233 / 67%) !important;
   }
   .MuiTypography-body1{
       font-size: 1.5rem !important;
-  }
+  } */
