--- a/frontend/src/components/Product/Search.css
+++ b/frontend/src/components/Product/Search.css
@@ -1,70 +1,67 @@
-.searchInputs {
-  margin-top: 105px;
+.searchBox {
+  width: 100vw;
+  height: 100vh;
+  max-width: 100%;
   display: flex;
+  justify-content: center;
   align-items: center;
-    justify-content: center;
+  background-color: rgb(231, 231, 231);
+  position: relative;
+  top: 0%;
+  left: 0;
+  animation: 0.5s ease-out 0s 1 slideIndown;
 }
 
-.search input {
+@keyframes slideIndown {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+.searchBox > input[type="text"] {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.274);
   background-color: white;
-  border: 0;
-  border-radius: 2px;
-  border-top-right-radius: 0px;
-  border-bottom-right-radius: 0px;
-  font-size: 18px;
-  padding: 15px;
-  height: 30px;
-  width: 300px;
-}
-
-.searchIcon {
-  height: 60px;
-  width: 50px;
-  background-color: white;
-  display: grid;
-  place-items: center;
-}
-
-input:focus {
+  border: none;
+  color: rgba(0, 0, 0, 0.637);
+  padding: 1vmax 2vmax;
+  width: 50%;
   outline: none;
-}
-.searchIcon svg {
-  font-size: 35px;
-}
-
-.dataResult {
-  margin-top: 5px;
-  width: 300px;
-  height: 200px;
-  background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  overflow: hidden;
-  overflow-y: auto;
+  border-radius: 0%;
+  font: 300 1.6vmax cursive;
+  box-sizing: border-box;
+  height: 8%;
 }
 
-.dataResult::-webkit-scrollbar {
-  display: none;
-}
-
-.dataResult .dataItem {
-  width: 100%;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  color: black;
-}
-
-.dataItem p {
-  margin-left: 10px;
-}
-a {
-  text-decoration: none;
-}
-
-/* a:hover {
-  background-color: lightgrey;
-} */
-
-#clearBtn {
+.searchBox > input[type="submit"] {
+  height: 8%;
+  border-radius: 0%;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.274);
+  background-color: #F14A16;
+  border: none;
+  padding: 1vmax;
+  width: 10%;
+  font: 300 1.8vmax "Jost";
   cursor: pointer;
+  color: white;
+  transition: all 0.5s;
+}
+
+.searchBox > input[type="submit"]:hover {
+  background-color: #4E9F3D;
+}
+
+@media screen and (max-width: 600px) {
+  .searchBox > input[type="text"] {
+    width: 100%;
+    font: 300 4vw cursive;
+    height: 10%;
+  }
+
+  .searchBox > input[type="submit"] {
+    height: 10%;
+    width: 30%;
+    font: 300 4vw "Roboto";
+  }
 }
